# home_work_shop_sky_6

./: data.json  pyproject.toml
blog/: admin.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_contact.py  0002_initial.py  0003_delete_blog.py  0004_product_is_published.py  0005_alter_product_options.py  0006_alter_product_options.py
catalog/static/css/: album.css
catalog/templates/main/: 403.html  base.html  blog_confirm_delete.html  blog_form.html  blog_list.html  categories.html  contacts.html  index.html  new_product_form.html  product.html  product_confirm_delete.html  product_update.html
catalog/templates/main/includes/: inc_main_menu.html
catalog/templatetags/: mediapath.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: email_activated.html  login.html  register.html  restore_password.html  user_form.html
